Fixed the alignment of text in boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,10 @@
 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #87ceeb;
-    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    text-align: left;
     border-radius: 30px;
     background-color: #2952a3;
 
@@ -32,7 +35,10 @@
 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #2952a3;
-    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    text-align: right;
     border-radius: 30px;
     background-color:  #3fa9d3;
 
